ghc-4335c07/testsuite/tests/parser/should_fail/readFail008.hs
module ShouldFail where

-- strictness annotations on the argument to a newtype constructor
-- are not allowed.
newtype N a = T ![a]
